--- a/client/Jenkinsfile
+++ b/client/Jenkinsfile
@@ -1,4 +1,5 @@
 pipeline {
+
     agent {
         kubernetes {
             yaml '''
@@ -6,7 +7,6 @@ apiVersion: v1
 kind: Pod
 spec:
   containers:
-
   - name: node
     image: node:18
     command: ["cat"]
@@ -25,54 +25,45 @@ spec:
       runAsUser: 0
       readOnlyRootFilesystem: false
     env:
-    - name: KUBECONFIG
-      value: /kube/config
+      - name: KUBECONFIG
+        value: /kube/config
     volumeMounts:
-    - name: kubeconfig-secret
-      mountPath: /kube/config
-      subPath: kubeconfig
+      - name: kubeconfig-secret
+        mountPath: /kube/config
+        subPath: kubeconfig
 
   - name: dind
     image: docker:dind
     securityContext:
       privileged: true
     env:
-    - name: DOCKER_TLS_CERTDIR
-      value: ""
+      - name: DOCKER_TLS_CERTDIR
+        value: ""
     volumeMounts:
-    - name: docker-config
-      mountPath: /etc/docker/daemon.json
-      subPath: daemon.json
+      - name: docker-config
+        mountPath: /etc/docker/daemon.json
+        subPath: daemon.json
 
   volumes:
-  - name: docker-config
-    configMap:
-      name: docker-daemon-config
-  - name: kubeconfig-secret
-    secret:
-      secretName: kubeconfig-secret
+    - name: docker-config
+      configMap:
+        name: docker-daemon-config
+    - name: kubeconfig-secret
+      secret:
+        secretName: kubeconfig-secret
 '''
         }
     }
 
     environment {
-        APP_NAME        = "dsa-visualization"
-        IMAGE_TAG       = "latest"
-        REGISTRY_URL    = "nexus-service-for-docker-hosted-registry.nexus.svc.cluster.local:8085"
-        REGISTRY_REPO   = "2401003-project"
-        SONAR_PROJECT   = "2401003-DSAV"
-        SONAR_HOST_URL  = "http://my-sonarqube-sonarqube.sonarqube.svc.cluster.local:9000"
-        NAMESPACE       = "2401003"
+        PROJECT_KEY = "2401003-DSAV"
+        IMAGE_NAME  = "dsa-visualization"
+        NAMESPACE   = "2401003"
+        REGISTRY    = "nexus-service-for-docker-hosted-registry.nexus.svc.cluster.local:8085"
+        REPO        = "2401003-project"
     }
 
     stages {
-
-        stage('Checkout Code') {
-            steps {
-                git branch: 'main',
-                    url: 'https://github.com/Ajay-1609/DSA-Visulize.git'
-            }
-        }
 
         stage('Build Frontend') {
             steps {
@@ -97,13 +88,17 @@ spec:
             steps {
                 container('sonar-scanner') {
                     withCredentials([
-                        string(credentialsId: 'sonar-token-2401003', variable: 'SONAR_TOKEN')
+                        usernamePassword(
+                            credentialsId: 'sonar-token-2401003',
+                            usernameVariable: 'SONAR_USER',
+                            passwordVariable: 'SONAR_TOKEN'
+                        )
                     ]) {
                         sh '''
                             sonar-scanner \
-                              -Dsonar.projectKey=$SONAR_PROJECT \
+                              -Dsonar.projectKey=2401003-DSAV \
                               -Dsonar.sources=client/src \
-                              -Dsonar.host.url=$SONAR_HOST_URL \
+                              -Dsonar.host.url=http://my-sonarqube-sonarqube.sonarqube.svc.cluster.local:9000 \
                               -Dsonar.login=$SONAR_TOKEN
                         '''
                     }
@@ -115,9 +110,7 @@ spec:
             steps {
                 container('dind') {
                     sh '''
-                        docker --version
-                        sleep 10
-                        docker login $REGISTRY_URL -u admin -p Changeme@2025
+                        docker login $REGISTRY -u admin -p Changeme@2025
                     '''
                 }
             }
@@ -127,25 +120,30 @@ spec:
             steps {
                 container('dind') {
                     sh '''
-                        docker build -t $APP_NAME:$IMAGE_TAG ./client
-
-                        docker tag $APP_NAME:$IMAGE_TAG \
-                          $REGISTRY_URL/$REGISTRY_REPO/$APP_NAME:$IMAGE_TAG
-
-                        docker push $REGISTRY_URL/$REGISTRY_REPO/$APP_NAME:$IMAGE_TAG
-                        docker images
+                        docker build -t ${IMAGE_NAME}:latest ./client
+                        docker tag ${IMAGE_NAME}:latest ${REGISTRY}/${REPO}/${IMAGE_NAME}:latest
+                        docker push ${REGISTRY}/${REPO}/${IMAGE_NAME}:latest
                     '''
                 }
             }
         }
 
-        stage('Deploy Application') {
+        stage('Create Namespace if not exists') {
+            steps {
+                container('kubectl') {
+                    sh '''
+                        kubectl get namespace ${NAMESPACE} || kubectl create namespace ${NAMESPACE}
+                    '''
+                }
+            }
+        }
+
+        stage('Deploy to Kubernetes') {
             steps {
                 container('kubectl') {
                     dir('k8s') {
                         sh '''
-                            kubectl apply -n $NAMESPACE -f deployment.yaml
-                            kubectl rollout status deployment/$APP_NAME -n $NAMESPACE
+                            kubectl apply -n ${NAMESPACE} -f deployment.yaml
                         '''
                     }
                 }
